--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ packages = [{include = "knu_fcsc_abitbot"}]
 python = "^3.11"
 python-telegram-bot = {extras = ["http2", "job-queue", "rate-limiter"], version = "^20.4"}
 loguru = "^0.7.0"
+sqlalchemy = "^2.0.19"
+alembic = "^1.11.1"
+psycopg = "^3.1.9"
+python-dateutil = "^2.8.2"
 
 
 [build-system]
