--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ psycopg = { extras = ["binary"], version = "^3.1.9" }
 python-dateutil = "^2.8.2"
 
 
+[tool.poetry.group.dev.dependencies]
+telethon = "^1.29.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
