Fix incorrect timezone info for Europe/Kyiv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ python-telegram-bot = { extras = ["http2", "job-queue", "rate-limiter", "webhook
 loguru = "^0.7.0"
 sqlalchemy = "^2.0.19"
 alembic = "^1.11.1"
-psycopg = { extras = ["binary"], version = "^3.1.9" }
+psycopg = { extras = ["binary"], version = "^3.1.10" }
 python-dateutil = "^2.8.2"
+tzdata = "*"
 
 
 [tool.poetry.group.dev.dependencies]
